--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
     <script src="./script.js" defer></script>
 </head>
 <body>
-    
+    <div class="sidebar"></div>
+    <div class="header"></div>
+    <div class="content"></div>
 </body>
 </html>
