--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
     <script src="./script.js" defer></script>
 </head>
 <body>
-    <div class="sidebar"></div>
-    <div class="header"></div>
-    <div class="content"></div>
+    <div class="sidebar">Sidebar</div>
+    <div class="header">Header</div>
+    <div class="content">Content</div>
 </body>
 </html>
