--- a/index.html
+++ b/index.html
@@ -8,7 +8,54 @@
     <script src="./script.js" defer></script>
 </head>
 <body>
-    <div class="sidebar">Sidebar</div>
+    <div class="sidebar">
+        <div class="logo">
+            <img src="" alt="">
+            <div class="logo-text">Dashboard</div>
+        </div>
+        <ul>
+            <li>
+                <img src="" alt="">
+                <div class="navlink">Home</div>
+            </li>
+            <li>
+                <img src="" alt="">
+                <div class="navlink">Profile</div>
+            </li>
+            <li>
+                <img src="" alt="">
+                <div class="navlink">Messages</div>
+            </li>
+            <li>
+                <img src="" alt="">
+                <div class="navlink">History</div>
+            </li>
+            <li>
+                <img src="" alt="">
+                <div class="navlink">Tasks</div>
+            </li>
+            <li>
+                <img src="" alt="">
+                <div class="navlink">Communities</div>
+            </li>
+            <li> 
+                <img src="" alt="">
+                <div class="navlink">blank tag</div>
+            </li>
+            <li>
+                <img src="" alt="">
+                <div class="navlink">Settings</div>
+            </li>
+            <li>
+                <img src="" alt="">
+                <div class="navlink">Support</div>
+            </li>
+            <li>
+                <img src="" alt="">
+                <div class="navlink">Privacy</div>
+            </li>
+        </ul>
+    </div>
     <div class="header">Header</div>
     <div class="content">Content</div>
 </body>
