Added subelements to header

--- a/index.html
+++ b/index.html
@@ -56,7 +56,12 @@
             </li>
         </ul>
     </div>
-    <div class="header">Header</div>
+    <div class="header">
+        <div class="searchbar"></div>
+        <div class="notificationbar"></div>
+        <div class="hithere"></div>
+        <div class="postbutton-container"></div>
+    </div>
     <div class="content">Content</div>
 </body>
 </html>
