Added search elements

--- a/index.html
+++ b/index.html
@@ -57,7 +57,10 @@
         </ul>
     </div>
     <div class="header">
-        <div class="searchbar"></div>
+        <div class="searchbar">
+            <img src="" alt="">
+            <input type="text" placeholder="Search">
+        </div>
         <div class="notificationbar"></div>
         <div class="hithere"></div>
         <div class="postbutton-container"></div>
