Addd main elements to header

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <script src="./script.js" defer></script>
 </head>
 <body>
+
     <div class="sidebar">
         <div class="logo">
             <img src="" alt="">
@@ -56,15 +57,30 @@
             </li>
         </ul>
     </div>
+
     <div class="header">
         <div class="searchbar">
             <img src="" alt="">
             <input type="text" placeholder="Search">
         </div>
-        <div class="notificationbar"></div>
-        <div class="hithere"></div>
-        <div class="postbutton-container"></div>
+        <div class="notificationbar">
+            <img src="" alt="">
+            <img src="" alt="">
+            <div class="account">George P. Burdell</div>
+        </div>
+        <div class="hithere">
+            <img src="" alt="">
+            <p>Hi there,</p>
+            <p>George P. Burdell (@georgepburdell)</p>
+        </div>
+        <div class="postbutton-container">
+            <button>New</button>
+            <button>Upload</button>
+            <button>Share</button>
+        </div>
     </div>
+
     <div class="content">Content</div>
+
 </body>
 </html>
