Added card container

--- a/index.html
+++ b/index.html
@@ -80,7 +80,20 @@
         </div>
     </div>
 
-    <div class="content">Content</div>
+    <div class="content">
+        <div class="projects">
+            <div class="title">Your Projects</div>
+            <div class="project-container">
+                
+            </div>
+        </div>
+        <div class="announcements">
+            <div class="title">Announcmenets</div>
+        </div>
+        <div class="trending">
+            <div class="title">Trending</div>
+        </div>
+    </div>
 
 </body>
 </html>
