--- a/index.html
+++ b/index.html
@@ -83,15 +83,24 @@
     <div class="content">
         <div class="projects">
             <div class="title">Your Projects</div>
-            <div class="project-container">
-                
-            </div>
+            <div class="project-container"></div>
         </div>
         <div class="announcements">
-            <div class="title">Announcmenets</div>
+            <div class="title">Announcements</div>
+            <div class="announcements-container">
+                <div>Site Maintenance</div>
+                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quidem dicta maxime iste debitis. Veniam adipisci voluptas, tempora est temporibus dolorum ipsum, autem, magnam officiis suscipit voluptatem. Autem nihil laborum ut!</p>
+                <hr>
+                <div>Community Share Day</div>
+                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quidem dicta maxime iste debitis. Veniam adipisci voluptas, tempora est temporibus dolorum ipsum, autem, magnam officiis suscipit voluptatem. Autem nihil laborum ut!</p>
+                <hr>
+                <div>Updated Privacy Policy</div>
+                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quidem dicta maxime iste debitis. Veniam adipisci voluptas, tempora est temporibus dolorum ipsum, autem, magnam officiis suscipit voluptatem. Autem nihil laborum ut!</p>
+            </div>
         </div>
         <div class="trending">
             <div class="title">Trending</div>
+            <div class="trending-container"></div>
         </div>
     </div>
 
