--- a/index.html
+++ b/index.html
@@ -100,7 +100,32 @@
         </div>
         <div class="trending">
             <div class="title">Trending</div>
-            <div class="trending-container"></div>
+            <div class="trending-container">
+                <div class="trending-card">
+                    <img src="" alt="">
+                    <div class="account">@tegan</div>
+                    <div class="account-name">World Peace Builder</div>
+                </div>
+
+                <div class="trending-card">
+                    <img src="" alt="">
+                    <div class="account">@morgan</div>
+                    <div class="account-name">Super Cool Project</div>
+                </div>
+
+                <div class="trending-card">
+                    <img src="" alt="">
+                    <div class="account">@kendall</div>
+                    <div class="account-name">Life Changing App</div>
+                </div>
+
+                <div class="trending-card">
+                    <img src="" alt="">
+                    <div class="account">@alex</div>
+                    <div class="account-name">No traffic Maker</div>
+                </div>
+
+            </div>
         </div>
     </div>
 
