Started adding nav icons and sizing

--- a/index.html
+++ b/index.html
@@ -11,12 +11,12 @@
 
     <div class="sidebar">
         <div class="logo">
-            <img src="" alt="">
+            <img src="./assets/icons/dashboard.svg" id="dashboard-icon" alt="dashboard-icon">
             <div class="logo-text">Dashboard</div>
         </div>
         <ul>
             <li>
-                <img src="" alt="">
+                <img src="./assets/icons/home.svg" class="navicon" alt="home-icon">
                 <div class="navlink">Home</div>
             </li>
             <li>
@@ -85,6 +85,7 @@
             <div class="title">Your Projects</div>
             <div class="project-container"></div>
         </div>
+
         <div class="announcements">
             <div class="title">Announcements</div>
             <div class="announcements-container">
@@ -98,6 +99,7 @@
                 <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quidem dicta maxime iste debitis. Veniam adipisci voluptas, tempora est temporibus dolorum ipsum, autem, magnam officiis suscipit voluptatem. Autem nihil laborum ut!</p>
             </div>
         </div>
+
         <div class="trending">
             <div class="title">Trending</div>
             <div class="trending-container">
