Hid blank nav link

--- a/index.html
+++ b/index.html
@@ -20,31 +20,31 @@
                 <div class="navlink">Home</div>
             </li>
             <li>
-                <img src="" alt="">
+                <img src="./assets/icons/profile.svg" class="navicon" alt="profile-icon">
                 <div class="navlink">Profile</div>
             </li>
             <li>
-                <img src="" alt="">
+                <img src="./assets/icons/messages.svg" class="navicon" alt="messages-icon">
                 <div class="navlink">Messages</div>
             </li>
             <li>
-                <img src="" alt="">
+                <img src="./assets/icons/history.svg" class="navicon" alt="history-icon">
                 <div class="navlink">History</div>
             </li>
             <li>
-                <img src="" alt="">
+                <img src="./assets/icons/tasks.svg" class="navicon" alt="tasks-icon">
                 <div class="navlink">Tasks</div>
             </li>
             <li>
-                <img src="" alt="">
+                <img src="./assets/icons/community.svg" class="navicon" alt="community">
                 <div class="navlink">Communities</div>
             </li>
-            <li> 
+            <li id="blank-nav-link"> 
                 <img src="" alt="">
                 <div class="navlink">blank tag</div>
             </li>
             <li>
-                <img src="" alt="">
+                <img src="./assets/icons/settings.svg" class="navicon" alt="settings-icon">
                 <div class="navlink">Settings</div>
             </li>
             <li>
