Made navigation icons white

--- a/index.html
+++ b/index.html
@@ -48,11 +48,11 @@
                 <div class="navlink">Settings</div>
             </li>
             <li>
-                <img src="" alt="">
+                <img src="./assets/icons/support.svg" class="navicon" alt="support-icon">
                 <div class="navlink">Support</div>
             </li>
             <li>
-                <img src="" alt="">
+                <img src="./assets/icons/privacy.svg" class="navicon" alt="privacy-icon">
                 <div class="navlink">Privacy</div>
             </li>
         </ul>
