--- a/index.html
+++ b/index.html
@@ -39,9 +39,9 @@
                 <img src="./assets/icons/community.svg" class="navicon" alt="community">
                 <div class="navlink">Communities</div>
             </li>
-            <li id="blank-nav-link"> 
-                <img src="" alt="">
-                <div class="navlink">blank tag</div>
+            <li class="hidden"> 
+                <img class="hidden">
+                <div class="hidden">blank tag</div>
             </li>
             <li>
                 <img src="./assets/icons/settings.svg" class="navicon" alt="settings-icon">
