Hid blank nav link in html instead of css

--- a/index.html
+++ b/index.html
@@ -39,9 +39,9 @@
                 <img src="./assets/icons/community.svg" class="navicon" alt="community">
                 <div class="navlink">Communities</div>
             </li>
-            <li class="hidden"> 
-                <img class="hidden">
-                <div class="hidden">blank tag</div>
+            <li hidden> 
+                <img hidden>
+                <div hidden>blank tag</div>
             </li>
             <li>
                 <img src="./assets/icons/settings.svg" class="navicon" alt="settings-icon">
