--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
 
     <div class="header">
         <div class="searchbar">
-            <img src="" alt="">
+            <img src="./assets/icons/search.svg" alt="">
             <input type="text" placeholder="Search">
         </div>
         <div class="notificationbar">
