Added buzz propic

--- a/index.html
+++ b/index.html
@@ -64,8 +64,8 @@
             <input type="text" placeholder="Search">
         </div>
         <div class="notificationbar">
-            <img src="" alt="">
-            <img src="" alt="">
+            <img src="./assets/icons/bell.svg" alt="notification-bell-icon">
+            <img src="./assets/profile-pictures/buzz.png" class="profile-picture" alt="profile-picture">
             <div class="account">George P. Burdell</div>
         </div>
         <div class="hithere">
