Styled notification bar

--- a/index.html
+++ b/index.html
@@ -65,11 +65,15 @@
         </div>
         <div class="notificationbar">
             <img src="./assets/icons/bell.svg" alt="notification-bell-icon">
-            <img src="./assets/profile-pictures/buzz.png" class="profile-picture" alt="profile-picture">
+
+            <div class="profile-picture">
+                <img src="./assets/profile-pictures/buzz.png" class="profile-picture" alt="profile-picture">
+            </div>
+            
             <div class="account">George P. Burdell</div>
         </div>
         <div class="hithere">
-            <img src="" alt="">
+            <img src="./assets/profile-pictures/buzz.png" alt="">
             <p>Hi there,</p>
             <p>George P. Burdell (@georgepburdell)</p>
         </div>
