Added container to hithere text

--- a/index.html
+++ b/index.html
@@ -74,8 +74,10 @@
         </div>
         <div class="hithere">
             <img src="./assets/profile-pictures/buzz.png" alt="">
-            <p>Hi there,</p>
-            <p>George P. Burdell (@georgepburdell)</p>
+            <div class="hi-text-container">
+                <p class="hi-text">Hi there,</p>
+                <p class="hi-name">George P. Burdell (@georgepburdell)</p>
+            </div>
         </div>
         <div class="postbutton-container">
             <button>New</button>
