styled announcement box

--- a/index.html
+++ b/index.html
@@ -95,13 +95,13 @@
         <div class="announcements">
             <div class="title">Announcements</div>
             <div class="announcements-container">
-                <div>Site Maintenance</div>
+                <div class="announcement-title">Site Maintenance</div>
                 <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quidem dicta maxime iste debitis. Veniam adipisci voluptas, tempora est temporibus dolorum ipsum, autem, magnam officiis suscipit voluptatem. Autem nihil laborum ut!</p>
                 <hr>
-                <div>Community Share Day</div>
+                <div class="announcement-title">Community Share Day</div>
                 <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quidem dicta maxime iste debitis. Veniam adipisci voluptas, tempora est temporibus dolorum ipsum, autem, magnam officiis suscipit voluptatem. Autem nihil laborum ut!</p>
                 <hr>
-                <div>Updated Privacy Policy</div>
+                <div class="announcement-title">Updated Privacy Policy</div>
                 <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quidem dicta maxime iste debitis. Veniam adipisci voluptas, tempora est temporibus dolorum ipsum, autem, magnam officiis suscipit voluptatem. Autem nihil laborum ut!</p>
             </div>
         </div>
