Added text wrappers for trending

--- a/index.html
+++ b/index.html
@@ -110,27 +110,35 @@
             <div class="title">Trending</div>
             <div class="trending-container">
                 <div class="trending-card">
-                    <img src="" alt="">
-                    <div class="account">@tegan</div>
-                    <div class="account-name">World Peace Builder</div>
+                    <img src="./assets/profile-pictures/hotdog.avif" alt="">
+                    <div class="text-wrapper">
+                        <div class="account">@tegan</div>
+                        <div class="account-name">World Peace Builder</div>
+                    </div>
                 </div>
 
                 <div class="trending-card">
-                    <img src="" alt="">
-                    <div class="account">@morgan</div>
-                    <div class="account-name">Super Cool Project</div>
+                    <img src="./assets/profile-pictures/buzz.png" alt="">
+                    <div class="text-wrapper">
+                        <div class="account">@georgepburdell</div>
+                        <div class="account-name">George P. Burdell</div>
+                    </div>
                 </div>
 
                 <div class="trending-card">
-                    <img src="" alt="">
-                    <div class="account">@kendall</div>
-                    <div class="account-name">Life Changing App</div>
+                    <img src="./assets/profile-pictures/alien.png" alt="">
+                    <div class="text-wrapper">
+                        <div class="account">@kendall</div>
+                        <div class="account-name">Life Changing App</div>
+                    </div>
                 </div>
 
                 <div class="trending-card">
-                    <img src="" alt="">
-                    <div class="account">@alex</div>
-                    <div class="account-name">No traffic Maker</div>
+                    <img src="./assets/profile-pictures/penguin.jpeg" alt="">
+                    <div class="text-wrapper">
+                        <div class="account">@alex</div>
+                        <div class="account-name">No traffic Maker</div>
+                    </div>
                 </div>
 
             </div>
