Removed negative margin on announcements title

--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
                 </div>
 
                 <div class="trending-card">
-                    <img src="./assets/profile-pictures/buzz.png" alt="">
+                    <img src="./assets/profile-pictures/buzz.png" id="buzz-trending">
                     <div class="text-wrapper">
                         <div class="account">@georgepburdell</div>
                         <div class="account-name">George P. Burdell</div>
@@ -126,7 +126,7 @@
                 </div>
 
                 <div class="trending-card">
-                    <img src="./assets/profile-pictures/alien.png" alt="">
+                    <img src="./assets/profile-pictures/alien.png" id="alien-trending">
                     <div class="text-wrapper">
                         <div class="account">@kendall</div>
                         <div class="account-name">Life Changing App</div>
